<resources>
    <string name="app_name">Traveling App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="longInputLabel">long:</string>
    <string name="latInputLabel">lat:</string>
    <string name="NameInputLabel">name:</string>
    <string name="addButtonLabel">ADD</string>
    <string name="current_permutation_label">Current permutation: </string>
    <string name="best_permutation_label">Best permutation: </string>
    <string name="cancel_button_label">CANCEL</string>
    <string name="next_label">NEXT</string>
    <string name="maps_api_key">AIzaSyD1DZfJyvdj6af2-x3Yq9vrinjN89A-irA</string>

    <string name="table1">Name</string>
    <string name="table2">LONG.</string>
    <string name="table3">LAT.</string>

</resources>