<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GraphCreation"
    android:background="@android:color/white">


    <TableLayout
        android:id="@+id/cityTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:stretchColumns="*">

        <TableRow>

            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/table1"
                android:textStyle="bold" />

            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/table2"
                android:textStyle="bold"/>

            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/table3"
                android:textStyle="bold"/>
        </TableRow>


    </TableLayout>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:gravity="right"
                android:padding="10dp"
                android:text="@string/NameInputLabel" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameInput"
                android:layout_width="750px"
                android:layout_height="match_parent"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/GetFromService"
                android:layout_width="150px"
                android:layout_height="100px"
                android:layout_marginRight="20px"
                android:src="@drawable/googleg_standard_color_18" />



        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:padding="10dp"
                android:text="@string/longInputLabel" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/longInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:gravity="right"
                android:padding="10dp"
                android:text="@string/latInputLabel" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/latInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20px"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="@string/addButtonLabel" />

            <Button
                android:id="@+id/randomizeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:text="RANDOMIZE" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/calculatePathButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="20px"
            android:layout_weight="1"
            android:text="CALCULATE PATH" />
    </androidx.appcompat.widget.LinearLayoutCompat>


</FrameLayout>